# cloud-sdk-python

./: .env_integration_tests.example  .gitignore  README.md  pyproject.toml
.claude/skills/review-pr/: SKILL.md
.claude/skills/scaffold-module/: SKILL.md
docs/: INTEGRATION_TESTS.md
src/sap_cloud_sdk/adms/: __init__.py  _async_http.py  _configuration_api.py  _document_api.py  _http.py  _ias_fetcher.py  _job_api.py  _models.py  _query_options.py  _relation_api.py  _token_cache.py  client.py  config.py  exceptions.py  user-guide.md
src/sap_cloud_sdk/agent_memory/: __init__.py  _http_transport.py  _models.py  client.py  config.py  user-guide.md
src/sap_cloud_sdk/agentgateway/: __init__.py  _customer.py  _dependencies_resolver.py  _lob.py  _mcp_session.py  _models.py  agw_client.py  config.py  exceptions.py
src/sap_cloud_sdk/core/: _telemetry_compat.py
src/sap_cloud_sdk/core/auditlog_ng/: __init__.py
src/sap_cloud_sdk/core/telemetry/: auto_instrument.py  config.py  constants.py  module.py  operation.py  user-guide.md
src/sap_cloud_sdk/core/telemetry/span_processors/: baggage_span_processor.py  propagated_attributes_processor.py
src/sap_cloud_sdk/destination/: certificate_client.py  client.py  fragment_client.py
src/sap_cloud_sdk/dms/: client.py  config.py  model.py
tests/adms/integration/: async_flow.feature  conftest.py  document_flow.feature  test_e2e_async_flow.py  test_e2e_document_flow.py
tests/adms/unit/: test_async_http.py  test_cache.py  test_client.py  test_exceptions.py  test_http.py  test_ias_fetcher.py  test_models.py  test_query_options.py
tests/agent_memory/integration/: agentmemory.feature  conftest.py  test_agentmemory_bdd.py
tests/agent_memory/unit/: test_client.py  test_config.py  test_http_transport.py
tests/agentgateway/integration/: conftest.py  test_agw_bdd.py
tests/agentgateway/unit/: test_agw_client.py  test_customer.py  test_dependencies_resolver.py  test_lob.py
tests/core/unit/auditlog_ng/unit/: test_create_client.py
tests/core/unit/telemetry/: test_baggage_span_processor.py  test_config.py  test_module.py  test_operation.py  test_propagated_attributes_processor.py
tests/dms/integration/: conftest.py
tests/dms/unit/: test_client_admin.py  test_client_cmis.py
